# Orbital-Attitude-Control-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: agent.yaml
notebooks/: train_sac.ipynb
src/envs/: attitude_env.py  utils.py
