[project]
name = "\"orbital-attitude-control-agent\""
version = "\"0.1.0\""
description = "\"An Agentic System to dynamically balance spacecraft orbital attitude given user instructions via RL and Lang-graph\""
authors = [
    {name = "\"Alliyah Steele\""}
]
license = "\"MIT Creative Commons\""
readme = "README.md"
requires-python = "\"3.14.6\""
dependencies = [
    "stable-baselines3 (>=2.9.0,<3.0.0)",
    "gymnasium (>=1.3.0,<2.0.0)",
    "torch (>=2.12.1,<3.0.0)",
    "numpy (>=2.5.0,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
